--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,5 @@
 div {
-	font-family: 'Macondo', cursive;
+	font-family: 'Oswald', cursive;
 	color: #008744;
 	font-weight: bold;
 	text-align: center;
